salesforce-litle-MP/src/objects/LitleRequestResponseLog__c.object
<CustomObject>
    <description>Object to log all the requests and responses to Litle MP</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Origination Account of the log</description>
        <inlineHelpText>Origination Account of the log</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>LitleRequestResponseLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Request_Method__c</fullName>
        <description>Legal Entity Request Method</description>
        <inlineHelpText>Legal Entity Request Method</inlineHelpText>
        <label>Legal Entity Request Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Source__c</fullName>
        <description>Displays if the source of this log is from the get litle mid form or from the scheduler</description>
        <inlineHelpText>Displays if the source of this log is from the get litle mid form or from the scheduler</inlineHelpText>
        <label>Log Source</label>
        <picklist>
            <picklistValues>
                <fullName>Get Litle MID action</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mcc Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KYC Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MccAcceptHeader__c</fullName>
        <description>Accept header forMcc request</description>
        <inlineHelpText>Accept header forMcc request</inlineHelpText>
        <label>Mcc Accept Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MccAuthorizationHeader__c</fullName>
        <description>Authorization header forMcc requests</description>
        <inlineHelpText>Authorization header forMcc requests</inlineHelpText>
        <label>Mcc Authorization Header</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>MccContentTypeHeader__c</fullName>
        <description>Content type header forMcc request</description>
        <inlineHelpText>Content type header forMcc request</inlineHelpText>
        <label>Mcc Content Type Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MccEndpoint__c</fullName>
        <description>Endpoint forMcc requests</description>
        <inlineHelpText>Endpoint forMcc requests</inlineHelpText>
        <label>Mcc Endpoint</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MccRequestDate__c</fullName>
        <description>Request date for Mcc request</description>
        <inlineHelpText>Request date for Mcc request</inlineHelpText>
        <label>Mcc RequestDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MccRequestXml__c</fullName>
        <description>Mcc Request Xml</description>
        <inlineHelpText>Mcc Request Xml</inlineHelpText>
        <label>Mcc RequestXml</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MccResponseDate__c</fullName>
        <description>Mcc Response Date</description>
        <inlineHelpText>Mcc Response Date</inlineHelpText>
        <label>Mcc ResponseDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MccResponseStatusCode__c</fullName>
        <description>Mcc Response Status Code</description>
        <inlineHelpText>Mcc Response Status Code</inlineHelpText>
        <label>Mcc ResponseStatusCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MccResponseStatusMessage__c</fullName>
        <description>Mcc Response Status Message</description>
        <inlineHelpText>Mcc Response Status Message</inlineHelpText>
        <label>Mcc ResponseStatusMsg</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MccResponseXml__c</fullName>
        <description>Mcc Response Xml</description>
        <inlineHelpText>Mcc Response Xml</inlineHelpText>
        <label>Mcc ResponseXml</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mcc_Request_Method__c</fullName>
        <description>Mcc Request Method</description>
        <inlineHelpText>Mcc Request Method</inlineHelpText>
        <label>Mcc Request Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity causing this log entry</description>
        <inlineHelpText>Opportunity causing this log entry</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>LitleRequestResponseLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Merchant_Request_Method__c</fullName>
        <description>Sub Merchant Request Method</description>
        <inlineHelpText>Sub Merchant Request Method</inlineHelpText>
        <label>Sub Merchant Request Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createLegalEntityRequestDate__c</fullName>
        <description>Request date for create legal entity request</description>
        <inlineHelpText>Request date for create legal entity request</inlineHelpText>
        <label>Create LegalEntity  RequestDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>createLegalEntityRequestXml__c</fullName>
        <description>Create Legal Entity Request Xml</description>
        <inlineHelpText>Create Legal Entity Request Xml</inlineHelpText>
        <label>Create LegalEntity  RequestXml</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>createLegalEntityResponseDate__c</fullName>
        <description>Create Legal Entity Response Date</description>
        <inlineHelpText>Create Legal Entity Response Date</inlineHelpText>
        <label>Create LegalEntity  ResponseDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>createLegalEntityResponseStatusCode__c</fullName>
        <description>Create Legal Entity Response Status Code</description>
        <inlineHelpText>Create Legal Entity Response Status Code</inlineHelpText>
        <label>Create LegalEntity  ResponseStatusCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createLegalEntityResponseStatusMessage__c</fullName>
        <description>Create Legal Entity Response Status Message</description>
        <inlineHelpText>Create Legal Entity Response Status Message</inlineHelpText>
        <label>Create LegalEntity  ResponseStatusMsg</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createLegalEntityResponseXml__c</fullName>
        <description>Create Legal Entity Response Xml</description>
        <inlineHelpText>Create Legal Entity Response Xml</inlineHelpText>
        <label>Create LegalEntity  ResponseXml</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>createSubMerchantRequestDate__c</fullName>
        <description>Request date for create Sub Merchant request</description>
        <inlineHelpText>Request date for create Sub Merchant request</inlineHelpText>
        <label>Create SubMerchantRequestDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>createSubMerchantRequestXml__c</fullName>
        <description>Create Sub Merchant Request Xml</description>
        <inlineHelpText>Create Sub Merchant Request Xml</inlineHelpText>
        <label>Create SubMerchantRequestXml</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>createSubMerchantResponseDate__c</fullName>
        <description>Create Sub Merchant Response Date</description>
        <inlineHelpText>Create Sub Merchant Response Date</inlineHelpText>
        <label>Create SubMerchantResponseDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>createSubMerchantResponseStatusCode__c</fullName>
        <description>Create Sub Merchant Response Status Code</description>
        <inlineHelpText>Create Sub Merchant Response Status Code</inlineHelpText>
        <label>Create SubMerchantResponseStatusCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createSubMerchantResponseStatusMessage__c</fullName>
        <description>Create Sub Merchant Response Status Message</description>
        <inlineHelpText>Create Sub Merchant Response Status Message</inlineHelpText>
        <label>Create SubMerchantResponseStatusMessage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createSubMerchantResponseXml__c</fullName>
        <description>Create Sub Merchant Response Xml</description>
        <inlineHelpText>Create Sub Merchant Response Xml</inlineHelpText>
        <label>Create SubMerchantResponseXml</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>legalEntityAcceptHeader__c</fullName>
        <description>Accept header for legal entity request</description>
        <inlineHelpText>Accept header for legal entity request</inlineHelpText>
        <label>LegalEntity  Accept Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityAuthorizationHeader__c</fullName>
        <description>Authorization header for legal entity requests</description>
        <inlineHelpText>Authorization header for legal entity requests</inlineHelpText>
        <label>LegalEntity  Authorization Header</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>legalEntityContentTypeHeader__c</fullName>
        <description>Content type header for legal entity request</description>
        <inlineHelpText>Content type header for legal entity request</inlineHelpText>
        <label>LegalEntity  Content Type Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityEndpoint__c</fullName>
        <description>Endpoint for legal entity requests</description>
        <inlineHelpText>Endpoint for legal entity requests</inlineHelpText>
        <label>LegalEntity  Endpoint</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityId__c</fullName>
        <description>Stores the legal entity id from the create legal entity response</description>
        <inlineHelpText>Stores the legal entity id from the create legal entity response</inlineHelpText>
        <label>LegalEntity  ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legalEntityResponseCode__c</fullName>
        <description>Stores the legal entity response code from the create legal entity request</description>
        <inlineHelpText>Stores the legal entity response code from the create legal entity request</inlineHelpText>
        <label>LegalEntity  Response Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObjectName__c</fullName>
        <description>The name of the sObject of the logged request.</description>
        <inlineHelpText>The name of the sObject of the logged request.</inlineHelpText>
        <label>sObject Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObjectType__c</fullName>
        <description>Type Of Object (Account/Opportunity) which is logged.</description>
        <inlineHelpText>Type Of Object (Account/Opportunity) which is logged.</inlineHelpText>
        <label>sObject Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantAcceptHeader__c</fullName>
        <description>Accept Header of sub merchant request</description>
        <inlineHelpText>Accept Header of sub merchant request</inlineHelpText>
        <label>SubMerchant Accept Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantAuthorizationHeader__c</fullName>
        <description>Authorization header for sub merchant requests</description>
        <inlineHelpText>Authorization header for sub merchant requests</inlineHelpText>
        <label>Sub Merchant Authorization Header</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>subMerchantContentTypeHeader__c</fullName>
        <description>Content Type Header of sub merchant request</description>
        <inlineHelpText>Content Type Header of sub merchant request</inlineHelpText>
        <label>SubMerchant Content Type Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subMerchantEndpoint__c</fullName>
        <description>Endpoint for create submerchant request</description>
        <inlineHelpText>Endpoint for create submerchant request</inlineHelpText>
        <label>SubMerchant Endpoint</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Litle Request Response Log</label>
    <listViews>
        <fullName>LitleLogView</fullName>
        <columns>NAME</columns>
        <columns>sObjectType__c</columns>
        <columns>sObjectName__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>LitleLogView</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>LogId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Litle Request Response Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>